--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,9 @@ html {
   font-size: 18px;
   background-color: #1b1919;
 
-  padding: 133px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1,
@@ -51,136 +53,24 @@ ol {
 
 .content {
   display: flex;
-  gap: 27px;
-  justify-content: center;
   align-items: flex-end;
-}
-
-.result__video-container {
-  width: 711px;
-  height: 386px;
-  margin-bottom: 16px;
-  position: relative;
-}
-
-.result__video {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-}
-
-.search-form {
-  display: flex;
-  justify-content: space-between;
-  align-items: start;
-}
-
-.search-form__fieldset-title {
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin-bottom: 5px;
-}
-
-.content__details {
-  width: 100%;
-  height: 100%;
-}
-
-.title {
-  margin-bottom: 26px;
-
-  font-family: Oswald, sans-serif;
-  font-size: 75px;
-  font-weight: 700;
-  line-height: 94%;
-  text-transform: uppercase;
-}
-
-.content__accent {
-  color: #545050;
-}
-
-.content__list {
-  max-height: 298px;
-  overflow-y: auto;
-  position: relative;
-  padding: 3px;
-}
-
-.content__card-link:link,
-.content__card-link:visited {
-  display: block;
-  text-decoration: none;
-  color: #fff;
-  margin: 2px;
-}
-
-.content__card-link:hover {
-  text-decoration: underline;
-  text-underline-offset: 15%;
-  text-decoration-thickness: 1px;
-}
-
-.content__card-link_current:link {
-  background-color: #545050;
-}
-
-.content__card-link:focus {
-  outline: none;
-}
-
-.content__card-link:focus-visible {
-  outline: 1px solid #fff;
-}
-
-.content__list-item {
-  padding: 2px;
-}
-
-.content__list-item:not(:last-child) {
-  margin-bottom: 30px;
-}
-
-.content__video-card {
-  display: flex;
-  justify-content: space-between;
-}
-
-.content__video-card-title {
-  font-family: Oswald, sans-serif;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 100%;
-  text-transform: uppercase;
-  margin-bottom: 6px;
-}
-
-.content__video-card-description {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 90%;
-}
-
-.content__video-card-thumbnail {
-  width: 194px;
+  gap: 28px;
+  inline-size: 100%;
+  padding-inline: 30px;
+  padding-block: 133px;
 }
 
 .button {
-  background-color: transparent;
-  border: 1px solid #fff;
+  padding-block-start: 6px;
+  padding-block-end: 6px;
   color: #fff;
-  cursor: pointer;
-  padding-top: 6px;
-  padding-bottom: 6px;
-
-  font-size: 18px;
+  font-size: inherit;
+  font-family: inherit;
   font-weight: 700;
   line-height: normal;
+  background-color: transparent;
+  border: 1px solid #fff;
+  cursor: pointer;
 }
 
 .button:focus {
@@ -200,14 +90,34 @@ ol {
   text-decoration: underline;
 }
 
-.search-form__submit-button {
-  align-self: flex-end;
-  width: 194px;
-  text-align: center;
+/* Section result */
+
+.result__video-container {
+  position: relative;
+  inline-size: 711px;
+  block-size: 386px;
+  margin-block-end: 16px;
 }
 
-.more-button {
-  width: 100%;
+.result__video {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.search-form__fieldset-title {
+  margin-block-end: 5px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .search-form__fieldset {
@@ -215,21 +125,23 @@ ol {
 }
 
 .search-form__textfield {
-  appearance: none;
-  width: 225px;
+  inline-size: 225px;
+  padding-block-start: 2px;
+  padding-block-end: 2px;
+  color: #fff;
+  font-size: inherit;
+  font-family: inherit;
+  line-height: normal;
   background-color: transparent;
-  border: none;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  appearance: none;
+}
 
-  font-size: inherit;
-  font-family: inherit;
+.search-form__textfield::placeholder {
   color: rgba(255 255 255 / 0.7);
-  line-height: normal;
 }
 
 .search-form__textfield:focus {
@@ -249,13 +161,9 @@ ol {
 .search-form__label {
   display: flex;
   align-items: center;
+  inline-size: fit-content;
   gap: 5px;
-  width: fit-content;
   cursor: pointer;
-}
-
-.search-form__label:focus {
-  outline: none;
 }
 
 .search-form__checkbox-list .search-form__label:hover {
@@ -268,21 +176,115 @@ ol {
 }
 
 .search-form__pseudo-checkbox {
-  width: 19px;
-  height: 19px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 19px;
+  block-size: 19px;
   border: 1px solid #fff;
-  position: relative;
 }
 
 input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   content: '';
   display: block;
-  width: 15px;
-  height: 15px;
+  inline-size: 15px;
+  block-size: 15px;
   background-color: #fff;
+}
 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.search-form__submit-button {
+  align-self: flex-end;
+  inline-size: 194px;
+  text-align: center;
+}
+
+/* Section content-details */
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-self: start;
+  gap: 23px;
+  block-size: 534px;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  position: relative;
+  max-block-size: 298px;
+  overflow-y: auto;
+  padding: 3px;
+}
+
+.content__list-item:not(:last-child) {
+  margin-block-end: 30px;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  padding: 2px;
+  color: #fff;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  text-underline-offset: 15%;
+  text-decoration-thickness: 1px;
+}
+
+.content__card-link:active,
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content__video-card-title {
+  margin-block-end: 6px;
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 90%;
+}
+
+.content__video-card-thumbnail {
+  inline-size: 194px;
+  block-size: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.more-button {
+  inline-size: 100%;
 }
