--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,6 @@ ol {
   gap: 28px;
   inline-size: 100%;
   padding-inline: 30px;
-  padding-block: 133px;
 }
 
 .button {
@@ -96,6 +95,7 @@ ol {
   position: relative;
   inline-size: 711px;
   block-size: 386px;
+  margin-block-start: 78px;
   margin-block-end: 16px;
 }
 
@@ -133,8 +133,8 @@ ol {
   font-family: inherit;
   line-height: normal;
   background-color: transparent;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
   appearance: none;
@@ -199,14 +199,12 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 }
 
 /* Section content-details */
-
 .content__details {
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-self: start;
-  gap: 23px;
-  block-size: 534px;
+  gap: 22px;
 }
 
 .title {
@@ -223,9 +221,9 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 
 .content__list {
   position: relative;
-  max-block-size: 298px;
+  block-size: 298px;
   overflow-y: auto;
-  padding: 3px;
+  padding: 2px;
 }
 
 .content__list-item:not(:last-child) {
@@ -261,6 +259,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 .content__video-card {
   display: flex;
   justify-content: space-between;
+  inline-size: 394px;
 }
 
 .content__video-card-title {
